--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "next": "14.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"m
+    "react-dom": "18.2.0",
     "@vercel/analytics": "^1.1.1"
   }
 }
